# IdeaPractice

./: .gitignore  CLAUDE.md  Procfile  README.md  README.ru.md  compile_messages.py  db.sqlite3  idea.md  manage.py  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
journal/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
journal/management/commands/: check_all.py  compilemessages.py  rundev.py
journal/migrations/: 0001_initial.py  0002_comment.py  0003_comment_author_recording_owner_sharedrecording.py  0004_recording_type.py  0005_invite.py  0006_suno_status.py  0007_bpm_key.py  0008_instrument_family_choices.py  0009_peaks_field.py  0010_project_dawfile_clip_recording_project_and_more.py
journal/templatetags/: journal_extras.py
journal/tests/: conftest.py  test_tasks.py  test_views.py
locale/el/LC_MESSAGES/: django.mo  django.po
locale/es/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
static/css/: main.css
templates/: base.html
templates/journal/: project_create.html  project_detail.html  project_list.html  recording_detail.html  recording_list.html  recording_share.html  recording_upload.html  stats.html
templates/registration/: login.html  register.html
