[project]
name = "idea-practice-tracker"
version = "0.1.0"
description = "Music ideas and practice tracker"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.0,<6.0",
    "boto3>=1.34.0,<2.0.0",
    "django-storages>=1.14.0,<2.0.0",
    "mutagen>=1.47.0,<2.0.0",
    "celery[redis]>=5.4,<6.0",
    "httpx>=0.27,<1.0",
]

[dependency-groups]
dev = [
    "uv>=0.8.0,<1.0.0",
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-django>=4.8,<5.0",
    "pytest-xdist>=3.6,<4.0",
    "ruff>=0.6.0,<1.0.0",
    "pyright>=1.1.0",
    "django-stubs>=5.0,<6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "journal/migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=journal",
    "--cov=config",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
branch = true
source = ["journal", "config"]
omit = [
    "*/migrations/*",
    "manage.py",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
exclude = ["journal/migrations", ".venv"]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.coverage.report]
show_missing = true
skip_covered = false
